syntax = "proto3";
package pbclient;
//option go_package = "trcell/pkg/pb/pbclient";
option go_package = "./pbclient";

// 玩家基本信息
message PlayerHeadInfo
{
    int64 RoleID = 1;       // 角色id
    string Nickname = 2;    // 昵称
    int32 Icon = 3;         // 图像
    bool IsOnline = 4;      // 是否在线
}